[package]
name = "oa-sample-analyzer"
version = "0.1.0"
edition = "2021"
description = "Fast parallel audio-sample analyzer (length, pitch, spectral complexity) -> .PEAK JSON"

[[bin]]
name = "oa_sample_analyzer"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true

[dependencies]
hound = "3.5"
rustfft = "6.2"
walkdir = "2.5"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
webrtc-vad = "0.4.0"
ebur128 = "0.1"
symphonia = { version = "0.5", features = ["mp3", "flac", "aiff", "isomp4", "aac", "alac", "ogg", "vorbis", "wav", "pcm"] }
