[package]
name = "oa-graph-layout"
version = "0.1.0"
edition = "2021"
description = "Computes the 3D sample-cloud placement (axes, sizes, colours, ticks) for the Sample Analyzer GUI."

[[bin]]
name = "oa_graph_layout"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
